@@ -1,5 +1,5 @@
 ######################################################################
-# $Id: CacheBenchmark.pm,v 1.5 2001/03/22 18:40:08 dclinton Exp $
+# $Id: CacheBenchmark.pm,v 1.6 2001/03/25 18:13:16 dclinton Exp $
 # Copyright (C) 2001 DeWitt Clinton  All Rights Reserved
 #
 # Software distributed under the License is distributed on an "AS
@@ -46,19 +46,20 @@ my $MAX_SIZE = 10000;
 
 my $UNAME_COMMAND = 'uname -a';
 
+$| = 1;
 
 sub Benchmark_Cache
 {
   Print_System_Info( );
-#  Benchmark_Memory_Cache( );
-#  Benchmark_File_Cache( );
-#  Benchmark_Shared_Memory_Cache( );
-#  Benchmark_Size_Aware_Memory_Cache_Without_Max_Size( );
-#  Benchmark_Size_Aware_Memory_Cache_With_Max_Size( );
+  Benchmark_Memory_Cache( );
+  Benchmark_File_Cache( );
+  Benchmark_Shared_Memory_Cache( );
+  Benchmark_Size_Aware_Memory_Cache_Without_Max_Size( );
+  Benchmark_Size_Aware_Memory_Cache_With_Max_Size( );
   Benchmark_Size_Aware_File_Cache_Without_Max_Size( );
-#  Benchmark_Size_Aware_File_Cache_With_Max_Size( );
-#  Benchmark_Size_Aware_Shared_Memory_Cache_Without_Max_Size( );
-#  Benchmark_Size_Aware_Shared_Memory_Cache_With_Max_Size( );
+  Benchmark_Size_Aware_File_Cache_With_Max_Size( );
+  Benchmark_Size_Aware_Shared_Memory_Cache_Without_Max_Size( );
+  Benchmark_Size_Aware_Shared_Memory_Cache_With_Max_Size( );
 }
 
 
